--- a/public/index.html
+++ b/public/index.html
@@ -73,7 +73,8 @@
                     <div class="banner_content">
                         <div class="media">
                             <div class="d-flex">
-                                <img src="resources/img/personal.jpg" alt="">
+                                <!-- <img src="resources/img/personal.jpg" alt=""> -->
+                                <img src="https://scontent.fsgn4-1.fna.fbcdn.net/v/t1.0-9/p960x960/80391080_594966004595075_1892665334272360448_o.jpg?_nc_cat=101&_nc_ohc=KLg9raavHZ8AQlXIE7lByGfiWGnwUVv2rvhgcvR5cw4Xd_hUza28FLWvg&_nc_ht=scontent.fsgn4-1.fna&oh=dde6d44570ab22b17cb6ed1a4868d07f&oe=5E80EDA6" alt="">
                             </div>
                             <div class="media-body">
                                 <div class="personal_text">
