--- a/public/index.html
+++ b/public/index.html
@@ -259,13 +259,13 @@
                         <br />
                         <ul>
                             <li>
-                                The goal of 6 months, perfecting professional knowledge and being able to operate independently. Achieve TOEIC 700.
+                                Goals of 6 months, perfecting professional knowledge and being able to operate independently.
                             </li>
                             <li>
-                                One year goal, to become a Full Stack Developer (MERN STACK). Achieve TOEIC 800 and TOCFL 2.
+                                Goals of a year, become a Full Stack Developer (MERN STACK).
                             </li>
                             <li>
-                                The goal of 2 years, has advancements in career. Achieve TOEIC 900 and TOCFL 4.
+                                Goals of 2 years, has advancements in career.
                             </li>
                         </ul>
                     </div>
