--- a/public/index.html
+++ b/public/index.html
@@ -147,25 +147,29 @@
                         </ul>
                         <br />
                         <div class="row">
-                            <div class="col-md-4">
+                            <div class="col">
                                 <div class="wel_item">
                                     <i class="lnr lnr-history"></i>
-                                    <h4></h4>
-                                    <p>Skills</p>
+                                    <h4>Skills</h4>
+                                    <p></p>
                                 </div>
                             </div>
-                            <div class="col-md-4">
+                        </div>
+                        <div class="row">
+                            <div class="col">
                                 <div class="wel_item">
                                     <i class="lnr lnr-book"></i>
-                                    <h4></h4>
-                                    <p>Projects</p>
+                                    <h4>Projects</h4>
+                                    <p><b><a href="http://247hostels.kilatiron.com/" target="_blank">247hostels.kilatiron.com </a></b>(Student project)</p>
                                 </div>
                             </div>
-                            <div class="col-md-4">
+                        </div>
+                        <div class="row">
+                            <div class="col">
                                 <div class="wel_item">
                                     <i class="lnr lnr-users"></i>
-                                    <h4></h4>
-                                    <p>Communities</p>
+                                    <h4>Communities</h4>
+                                    <p></p>
                                 </div>
                             </div>
                         </div>
