--- a/public/index.html
+++ b/public/index.html
@@ -133,6 +133,9 @@
                                     <li>
                                         Worked with MS SQL, MY SQL, MONGODB
                                     </li>
+                                    <li>
+                                        Worked with Eclipse, Netbean, Sublime Text, Visual Studio Code
+                                    </li>
                                 </ul>
                             </li>
                             <li>
