--- a/public/index.html
+++ b/public/index.html
@@ -163,7 +163,8 @@
                                 <div class="wel_item">
                                     <i class="lnr lnr-book"></i>
                                     <h4>Projects</h4>
-                                    <p><b><a href="http://247hostels.kilatiron.com/" target="_blank">247hostels.kilatiron.com </a></b>(Student project)</p>
+                                    <p><b><a href="http://247hostels.kilatiron.com/" target="_blank">247hostels.kilatiron.com </a></b>(Student project - JAVA SPRING MVC)</p>
+                                    <p><b><a href="https://istores.herokuapp.com/" target="_blank">istores.herokuapp.com </a></b>(Student project - MERN STACK)</p>
                                 </div>
                             </div>
                         </div>
