--- a/public/index.html
+++ b/public/index.html
@@ -80,21 +80,20 @@
                             <div class="personal_text">
                                 <h6>Hello, I'm </h6>
                                 <h3>Phạm Thế Hữu</h3>
-                                <h5>Fresher Backend Developer</h5>
+                                <h5>WEB DEVELOPER</h5>
                                 <div class="education">
-                                    <span class="education-title">INFORMATION TECHNOLOGY ENGINEER</span>
-                                    <span class="education-title">&amp; BACHELOR OF TECHNICAL EDUCATION OF INFORMATION TECHNOLOGY</span>
+                                    <span class="education-title">DEGREE OF ENGINEER INFORMATION TECHNOLOGY</span>
                                     <span class="education-school">HCMC University of Technology and Education</span>
-                                    <span class="education-time">2015 - 2020</span>
-                                    <span class="education-gpa">GPA: 7.45 (Good)</span>
+                                    <span class="education-gpa">GPA: <b>7.45 (Good)</b><span class="education-time">2015 - 2020</span></span>
                                 </div>
                                 <ul class="list basic_info">
                                     <li><a href="#"><i class="lnr lnr-calendar-full"></i> 2nd July, 1997</a></li>
                                     <li><a href="tel:0344754889"><i class="lnr lnr-phone-handset"></i> 0344 754 889</a></li>
                                     <li><a href="mailto:phamhuu2702@gmail.com"><i class="lnr lnr-envelope"></i> phamhuu2702@gmail.com</a></li>
+                                    <li><a href="#"><i class="lnr lnr-location"></i> Thu Duc, Ho Chi Minh, Vietnam</a></li>
                                 </ul>
                                 <ul class="list personal_social">
-                                    <li><a href="https://www.facebook.com/phamhuu2702"><i class="fa fa-facebook"></i></a></li>
+                                    <li><a href="https://www.facebook.com/phamhuu2702" target="_blank"><i class="fa fa-facebook"></i></a></li>
                                     <li><a href="#"><i class="fa fa-twitter"></i></a></li>
                                     <li><a href="#"><i class="fa fa-github"></i></a></li>
                                     <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
@@ -114,7 +113,7 @@
             <div class="row welcome_inner">
                 <div class="col-lg-6">
                     <div class="welcome_text">
-                        <h4>HIGHLIGHT</h4>
+                        <h4>HIGHLIGHTS</h4>
                         <ul>
                             <li>
                                 Good knowledge in software industry:
@@ -145,7 +144,7 @@
                                 Strong at troubleshooting issues and providing solutions
                             </li>
                             <li>
-                                Quick at learning new technology 
+                                Quick at learning new technology
                             </li>
                         </ul>
                         <br />
@@ -153,7 +152,7 @@
                             <div class="col">
                                 <div class="wel_item">
                                     <i class="lnr lnr-history"></i>
-                                    <h4>Skills</h4>
+                                    <h4>Experiences</h4>
                                     <p></p>
                                 </div>
                             </div>
@@ -163,8 +162,14 @@
                                 <div class="wel_item">
                                     <i class="lnr lnr-book"></i>
                                     <h4>Projects</h4>
-                                    <p><b><a href="http://247hostels.kilatiron.com/" target="_blank">247hostels.kilatiron.com </a></b>(Student project - JAVA SPRING MVC)</p>
-                                    <p><b><a href="https://istores.herokuapp.com/" target="_blank">istores.herokuapp.com </a></b>(Student project - MERN STACK)</p>
+                                    <ul>
+                                        <li>
+                                            <b><a href="http://247hostels.kilatiron.com/" target="_blank">247hostels.kilatiron.com</a></b> (Student project - JAVA SPRING MVC)
+                                        </li>
+                                        <li>
+                                            <b><a href="https://istores.herokuapp.com/" target="_blank">istores.herokuapp.com</a></b> (Student project - JAVA SPRING MVC)
+                                        </li>
+                                    </ul>
                                 </div>
                             </div>
                         </div>
@@ -172,8 +177,12 @@
                             <div class="col">
                                 <div class="wel_item">
                                     <i class="lnr lnr-users"></i>
-                                    <h4>Communities</h4>
-                                    <p></p>
+                                    <h4>Certificates</h4>
+                                    <ul>
+                                        <li>
+                                            <b>Intermediate certificate of technology pedagogy</b> (HCMC UTE)
+                                        </li>
+                                    </ul>
                                 </div>
                             </div>
                         </div>
@@ -260,7 +269,7 @@
             <div class="row welcome_inner">
                 <div class="col-lg-6">
                     <div class="welcome_text">
-                        <h4>Career goals</h4>
+                        <h4>Carrier Objectives</h4>
                         <div>
                             Constantly endeavor, study and train to improve both professional skills and soft skills.
                         </div>
@@ -282,10 +291,18 @@
                     <div class="tools_expert">
                         <div class="skill_main">
                             <div class="skill_item">
-                                <h4>Communication skills</h4>
+                                <h4>English</h4>
                                 <div class="progress_br">
                                     <div class="progress">
-                                        <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
+                                        <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="skill_item">
+                                <h4>Communication</h4>
+                                <div class="progress_br">
+                                    <div class="progress">
+                                        <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
                                     </div>
                                 </div>
                             </div>
@@ -306,18 +323,10 @@
                                 </div>
                             </div>
                             <div class="skill_item">
-                                <h4>Creative at work</h4>
+                                <h4>Creativity at work</h4>
                                 <div class="progress_br">
                                     <div class="progress">
-                                        <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="skill_item">
-                                <h4>Observation skills</h4>
-                                <div class="progress_br">
-                                    <div class="progress">
-                                        <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
+                                        <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
                                     </div>
                                 </div>
                             </div>
@@ -325,15 +334,15 @@
                                 <h4>Adaptability</h4>
                                 <div class="progress_br">
                                     <div class="progress">
-                                        <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                                        <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
                                     </div>
                                 </div>
                             </div>
                             <div class="skill_item">
-                                <h4>Work well under pressure</h4>
+                                <h4>Work under high pressure</h4>
                                 <div class="progress_br">
                                     <div class="progress">
-                                        <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
+                                        <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
                                     </div>
                                 </div>
                             </div>
@@ -414,7 +423,7 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="feature_item">
                         <i class="lnr lnr-license"></i>
-                        <h4>CERTIFICATEs</h4>
+                        <h4>COMMUNITIES</h4>
                         <p></p>
                     </div>
                 </div>
@@ -428,7 +437,7 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="feature_item">
                         <i class="lnr lnr-music-note"></i>
-                        <h4>HOBBIES</h4>
+                        <h4>INTERESTS</h4>
                         <p>Travel</p>
                         <p>Sport</p>
                         <p>Reading books</p>
@@ -468,7 +477,7 @@
                         <div id="mc_embed_signup">
                             <form action="#" method="get" class="subscribe_form relative">
                                 <div class="input-group d-flex flex-row">
-                                    <input name="EMAIL" placeholder="Enter email address" required="required" type="email">
+                                    <input name="email" placeholder="Enter email address" required="required" type="email">
                                     <button tyle="button" class="btn sub-btn"><span class="lnr lnr-arrow-right"></span></button>
                                 </div>
                                 <div class="mt-10 info"></div>
@@ -486,7 +495,7 @@
                             <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                             <li><a href="#"><i class="fa fa-twitter"></i></a></li>
                             <li><a href="#"><i class="fa fa-github"></i></a></li>
-                            <li><a href="#"><i class="fa fa-linked"></i></a></li>
+                            <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
                         </ul>
                     </aside>
                 </div>
