--- a/public/index.html
+++ b/public/index.html
@@ -180,7 +180,7 @@
                                     <h4>Certificates</h4>
                                     <ul>
                                         <li>
-                                            <b>Intermediate certificate of technology pedagogy</b> (HCMC UTE)
+                                            <b>Intermediate Certificate of Technology Pedagogy</b> (HCMC UTE)
                                         </li>
                                     </ul>
                                 </div>
