--- a/public/index.html
+++ b/public/index.html
@@ -167,7 +167,7 @@
                                             <b><a href="http://247hostels.kilatiron.com/" target="_blank">247hostels.kilatiron.com</a></b> (Student project - JAVA SPRING MVC)
                                         </li>
                                         <li>
-                                            <b><a href="https://istores.herokuapp.com/" target="_blank">istores.herokuapp.com</a></b> (Student project - JAVA SPRING MVC)
+                                            <b><a href="https://istores.herokuapp.com/" target="_blank">istores.herokuapp.com</a></b> (Student project - MERN STACK)
                                         </li>
                                     </ul>
                                 </div>
@@ -376,7 +376,7 @@
                                         <p>08/2015 - present</p>
                                     </div>
                                     <div class="media-body">
-                                        <h4>INFORMATION TECHNOLOGY ENGINEER<br>&amp; BACHELOR OF TECHNICAL EDUCATION OF INFORMATION TECHNOLOGY</h4>
+                                        <h4>INFORMATION TECHNOLOGY ENGINEER</h4>
                                         <p>HCMC University of Technology and Education</p>
                                     </div>
                                 </div>
@@ -411,7 +411,7 @@
             <div class="main_title">
                 <h2>THANK YOU !</h2>
                 <p>
-                    Instead of a paper CV, this website was created to help us interact with each other more easily.
+                    Instead of a paper CV, this website was created to help us interact with other more easily.
                     <br />
                     It would be a great honor for me if received your positive feedback to perfect this CV.
                     <br />
@@ -438,8 +438,8 @@
                     <div class="feature_item">
                         <i class="lnr lnr-music-note"></i>
                         <h4>INTERESTS</h4>
-                        <p>Travel</p>
                         <p>Sport</p>
+                        <p>Travel</p>
                         <p>Reading books</p>
                     </div>
                 </div>
