make best it better

--- a/public/index.html
+++ b/public/index.html
@@ -133,7 +133,7 @@
                                         Worked with MS SQL, MY SQL, MONGODB
                                     </li>
                                     <li>
-                                        Worked with Eclipse, Netbean, Sublime Text, Visual Studio Code
+                                        Worked with Eclipse, Netbeans, Sublime Text, Visual Studio Code
                                     </li>
                                 </ul>
                             </li>
