--- a/public/index.html
+++ b/public/index.html
@@ -276,13 +276,13 @@
                         <br />
                         <ul>
                             <li>
-                                Goals of 6 months, perfecting professional knowledge and being able to operate independently.
+                                6 months, perfecting professional knowledge and being able to operate independently.
                             </li>
                             <li>
-                                Goals of a year, become a Full Stack Developer (MERN STACK).
+                                1 year, become a Full Stack Developer (MERN STACK).
                             </li>
                             <li>
-                                Goals of 2 years, has advancements in career.
+                                2 years, has advancements in career.
                             </li>
                         </ul>
                     </div>
@@ -392,7 +392,7 @@
                                         <p>08/2015 - present</p>
                                     </div>
                                     <div class="media-body">
-                                        <h4>INFORMATION TECHNOLOGY ENGINEER<br>&amp; BACHELOR OF TECHNICAL EDUCATION OF INFORMATION TECHNOLOGY</h4>
+                                        <h4>INFORMATION TECHNOLOGY ENGINEER</h4>
                                         <p>HCMC University of Technology and Education</p>
                                     </div>
                                 </div>
@@ -411,9 +411,9 @@
             <div class="main_title">
                 <h2>THANK YOU !</h2>
                 <p>
-                    Instead of a paper CV, this website was created to help us interact with other more easily.
+                    Instead of a paper CV, this website was created to help us interact more easily.
                     <br />
-                    It would be a great honor for me if received your positive feedback to perfect this CV.
+                    It would be a great honor for me when received your positive feedback to perfect this.
                     <br />
                     Thank you for visiting!
                     <br />
