--- a/public/index.html
+++ b/public/index.html
@@ -82,7 +82,7 @@
                                 <h3>Phạm Thế Hữu</h3>
                                 <h5>WEB DEVELOPER</h5>
                                 <div class="education">
-                                    <span class="education-title">DEGREE OF ENGINEER INFORMATION TECHNOLOGY</span>
+                                    <span class="education-title">ENGINEER INFORMATION TECHNOLOGY</span>
                                     <span class="education-school">HCMC University of Technology and Education</span>
                                     <span class="education-gpa">GPA: <b>7.45 (Good)</b><span class="education-time">2015 - 2020</span></span>
                                 </div>
