--- a/public/index.html
+++ b/public/index.html
@@ -79,10 +79,10 @@
                         <div class="media-body">
                             <div class="personal_text">
                                 <h6>Hello, I'm </h6>
-                                <h3>Phạm Thế Hữu</h3>
+                                <h3>PHAM THE HUU</h3>
                                 <h5>WEB DEVELOPER</h5>
                                 <div class="education">
-                                    <span class="education-title">ENGINEER INFORMATION TECHNOLOGY</span>
+                                    <span class="education-title">INFORMATION TECHNOLOGY</span>
                                     <span class="education-school">HCMC University of Technology and Education</span>
                                     <span class="education-gpa">GPA: <b>7.45 (Good)</b><span class="education-time">2015 - 2020</span></span>
                                 </div>
@@ -413,7 +413,7 @@
                 <p>
                     Instead of a paper CV, this website was created to help us interact more easily.
                     <br />
-                    It would be a great honor for me when received your positive feedback to perfect this.
+                    Contact me with the information above for more info.
                     <br />
                     Thank you for visiting!
                     <br />
@@ -439,6 +439,7 @@
                         <i class="lnr lnr-music-note"></i>
                         <h4>INTERESTS</h4>
                         <p>Sport</p>
+                        <p>Music</p>
                         <p>Travel</p>
                         <p>Reading books</p>
                     </div>
