--- a/public/index.html
+++ b/public/index.html
@@ -84,7 +84,7 @@
                                 <div class="education">
                                     <span class="education-title">INFORMATION TECHNOLOGY</span>
                                     <span class="education-school">HCMC University of Technology and Education</span>
-                                    <span class="education-gpa">GPA: <b>7.45 (Good)</b><span class="education-time">2015 - 2020</span></span>
+                                    <span class="education-gpa">GPA: <b>7.51 (Good)</b><span class="education-time">2015 - 2020</span></span>
                                 </div>
                                 <ul class="list basic_info">
                                     <li><a href="#"><i class="lnr lnr-calendar-full"></i> 2nd July, 1997</a></li>
@@ -413,7 +413,7 @@
                 <p>
                     Instead of a paper CV, this website was created to help us interact more easily.
                     <br />
-                    Contact me with the information above for more info.
+                    Contact me with the information above.
                     <br />
                     Thank you for visiting!
                     <br />
@@ -440,7 +440,7 @@
                         <h4>INTERESTS</h4>
                         <p>Sport</p>
                         <p>Music</p>
-                        <p>Travel</p>
+                        <p>Traveling</p>
                         <p>Reading books</p>
                     </div>
                 </div>
@@ -460,11 +460,7 @@
                         </div>
                         <p>
                             <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                            Copyright &copy;
-                            <script>
-                                document.write(new Date().getFullYear());
-                            </script>
-                            by <strong>HUU PHAM</strong>
+                            &copy; <strong>HUU PHAM</strong>
                             <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                         </p>
                     </aside>
