--- a/public/index.html
+++ b/public/index.html
@@ -84,7 +84,7 @@
                                 <div class="education">
                                     <span class="education-title">INFORMATION TECHNOLOGY</span>
                                     <span class="education-school">HCMC University of Technology and Education</span>
-                                    <span class="education-gpa">GPA: <b>7.5 (Good)</b><span class="education-time">2015 - 2020</span></span>
+                                    <span class="education-gpa">GPA: <b>7.5</b><span class="education-time">2015 - 2020</span></span>
                                 </div>
                                 <ul class="list basic_info">
                                     <li><a href="#"><i class="lnr lnr-calendar-full"></i> 2nd July, 1997</a></li>
@@ -111,7 +111,7 @@
     <section class="welcome_area p_120">
         <div class="container">
             <div class="row welcome_inner">
-                <div class="col-lg-6">
+                <div class="col-lg-12">
                     <div class="welcome_text">
                         <h4>HIGHLIGHTS</h4>
                         <ul>
@@ -138,7 +138,7 @@
                                 </ul>
                             </li>
                             <li>
-                                Good at in OOP, Design Patterns, Algorithms data structures
+                                Good knowledge in OOP, Design Patterns, Algorithms data structures
                             </li>
                             <li>
                                 Strong at troubleshooting issues and providing solutions
@@ -149,16 +149,14 @@
                         </ul>
                         <br />
                         <div class="row">
-                            <div class="col">
+                            <div class="col-lg-4 col-md-6">
                                 <div class="wel_item">
                                     <i class="lnr lnr-history"></i>
                                     <h4>Experiences</h4>
                                     <p></p>
                                 </div>
                             </div>
-                        </div>
-                        <div class="row">
-                            <div class="col">
+                            <div class="col-lg-4 col-md-6">
                                 <div class="wel_item">
                                     <i class="lnr lnr-book"></i>
                                     <h4>Projects</h4>
@@ -169,9 +167,7 @@
                                     </ul>
                                 </div>
                             </div>
-                        </div>
-                        <div class="row">
-                            <div class="col">
+                            <div class="col-lg-4 col-md-6">
                                 <div class="wel_item">
                                     <i class="lnr lnr-users"></i>
                                     <h4>Certificates</h4>
@@ -180,76 +176,6 @@
                                             <b>Intermediate Certificate of Technology Pedagogy</b> (HCMC UTE)
                                         </li>
                                     </ul>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-6">
-                    <div class="tools_expert">
-                        <div class="skill_main">
-                            <div class="skill_item">
-                                <h4>Javascript <span class="counter">85</span>%</h4>
-                                <div class="progress_br">
-                                    <div class="progress">
-                                        <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="skill_item">
-                                <h4>NodeJs <span class="counter">70</span>%</h4>
-                                <div class="progress_br">
-                                    <div class="progress">
-                                        <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="skill_item">
-                                <h4>ReactJs <span class="counter">70</span>%</h4>
-                                <div class="progress_br">
-                                    <div class="progress">
-                                        <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="skill_item">
-                                <h4>NoSQL (MongoDB) <span class="counter">90</span>%</h4>
-                                <div class="progress_br">
-                                    <div class="progress">
-                                        <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="skill_item">
-                                <h4>Express Framework <span class="counter">75</span>%</h4>
-                                <div class="progress_br">
-                                    <div class="progress">
-                                        <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="skill_item">
-                                <h4>Java Core <span class="counter">80</span>%</h4>
-                                <div class="progress_br">
-                                    <div class="progress">
-                                        <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="skill_item">
-                                <h4>Java Spring Boot <span class="counter">70</span>%</h4>
-                                <div class="progress_br">
-                                    <div class="progress">
-                                        <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="skill_item">
-                                <h4>SQL (MySQL) <span class="counter">90</span>%</h4>
-                                <div class="progress_br">
-                                    <div class="progress">
-                                        <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
-                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -307,7 +233,7 @@
                                 <h4>Positive attitude</h4>
                                 <div class="progress_br">
                                     <div class="progress">
-                                        <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                                        <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
                                     </div>
                                 </div>
                             </div>
@@ -315,7 +241,7 @@
                                 <h4>Team working</h4>
                                 <div class="progress_br">
                                     <div class="progress">
-                                        <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
+                                        <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
                                     </div>
                                 </div>
                             </div>
@@ -323,7 +249,7 @@
                                 <h4>Creativity at work</h4>
                                 <div class="progress_br">
                                     <div class="progress">
-                                        <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                                        <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
                                     </div>
                                 </div>
                             </div>
@@ -331,7 +257,7 @@
                                 <h4>Adaptability</h4>
                                 <div class="progress_br">
                                     <div class="progress">
-                                        <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
+                                        <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
                                     </div>
                                 </div>
                             </div>
@@ -339,7 +265,7 @@
                                 <h4>Work under high pressure</h4>
                                 <div class="progress_br">
                                     <div class="progress">
-                                        <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                                        <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
                                     </div>
                                 </div>
                             </div>
