--- a/public/index.html
+++ b/public/index.html
@@ -162,7 +162,7 @@
                                     <h4>Projects</h4>
                                     <ul>
                                         <li>
-                                            <b><a href="https://istores.herokuapp.com/" target="_blank">istores.herokuapp.com</a></b> (Student project - MERN STACK)
+                                            <b><a href="https://istoresvn.herokuapp.com/" target="_blank">istoresvn.herokuapp.com</a></b> (MERN STACK - Heroku, MongoDB Atlas, Cloudinary)
                                         </li>
                                     </ul>
                                 </div>
