--- a/public/index.html
+++ b/public/index.html
@@ -80,14 +80,13 @@
                             <div class="personal_text">
                                 <h6>Hello, I'm </h6>
                                 <h3>PHAM THE HUU</h3>
-                                <h5>WEB DEVELOPER</h5>
+                                <h5>BACKEND WEB DEVELOPER</h5>
                                 <div class="education">
                                     <span class="education-title">INFORMATION TECHNOLOGY</span>
                                     <span class="education-school">HCMC University of Technology and Education</span>
-                                    <span class="education-gpa">GPA: <b>7.5</b><span class="education-time">2015 - 2020</span></span>
+                                    <span class="education-gpa">GPA: <b>7.5</b><span class="education-time">2015 - present</span></span>
                                 </div>
                                 <ul class="list basic_info">
-                                    <li><a href="#"><i class="lnr lnr-calendar-full"></i> 2nd July, 1997</a></li>
                                     <li><a href="tel:0344754889"><i class="lnr lnr-phone-handset"></i> 0344 754 889</a></li>
                                     <li><a href="mailto:phamhuu2702@gmail.com"><i class="lnr lnr-envelope"></i> phamhuu2702@gmail.com</a></li>
                                     <li><a href="#"><i class="lnr lnr-location"></i> Thu Duc, Ho Chi Minh, Vietnam</a></li>
@@ -162,7 +161,7 @@
                                     <h4>Projects</h4>
                                     <ul>
                                         <li>
-                                            <b><a href="https://istoresvn.herokuapp.com/" target="_blank">istoresvn.herokuapp.com</a></b> (MERN STACK - Heroku, MongoDB Atlas, Cloudinary)
+                                            <b><a href="https://istoresvn.herokuapp.com/" target="_blank">istoresvn.herokuapp.com</a></b> (MERN Stack - Heroku, MongoDB Atlas, Cloudinary)
                                         </li>
                                     </ul>
                                 </div>
