--- a/public/index.html
+++ b/public/index.html
@@ -186,14 +186,14 @@
     <!--================End Welcome Area =================-->
 
     <!--================Welcome Area =================-->
-    <section class="welcome_area p_120">
+    <section class="welcome_area p_100">
         <div class="container">
             <div class="row welcome_inner">
                 <div class="col-lg-6">
                     <div class="welcome_text">
                         <h4>Carrier Objectives</h4>
                         <div>
-                            Constantly endeavor, study and train to improve both professional skills and soft skills.
+                            Constantly endeavor, study and train to improve professional skills and soft skills.
                         </div>
                         <br />
                         <ul>
@@ -201,7 +201,7 @@
                                 6 months, perfecting professional knowledge and being able to operate independently.
                             </li>
                             <li>
-                                1 year, become a Full Stack Developer (MERN STACK).
+                                1 year, become a Full Stack Web Developer (MERN Stack).
                             </li>
                             <li>
                                 2 years, has advancements in career.
@@ -216,7 +216,7 @@
                                 <h4>English</h4>
                                 <div class="progress_br">
                                     <div class="progress">
-                                        <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
+                                        <div class="progress-bar" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
                                     </div>
                                 </div>
                             </div>
@@ -382,7 +382,7 @@
                         </div>
                         <p>
                             <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                            &copy; <strong>HUU PHAM</strong>
+                            <strong>Huu Pham</strong> &copy; 2019
                             <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                         </p>
                     </aside>
