--- a/public/index.html
+++ b/public/index.html
@@ -74,7 +74,7 @@
                 <div class="banner_content">
                     <div class="media">
                         <div class="d-flex">
-                            <img src="https://scontent.fsgn4-1.fna.fbcdn.net/v/t1.0-9/p960x960/80391080_594966004595075_1892665334272360448_o.jpg?_nc_cat=101&_nc_ohc=KLg9raavHZ8AQlXIE7lByGfiWGnwUVv2rvhgcvR5cw4Xd_hUza28FLWvg&_nc_ht=scontent.fsgn4-1.fna&oh=dde6d44570ab22b17cb6ed1a4868d07f&oe=5E80EDA6" alt="">
+                            <img src="avatar.jpg" alt="">
                         </div>
                         <div class="media-body">
                             <div class="personal_text">
@@ -84,10 +84,10 @@
                                 <div class="education">
                                     <span class="education-title">INFORMATION TECHNOLOGY</span>
                                     <span class="education-school">HCMC University of Technology and Education</span>
-                                    <span class="education-gpa">GPA: <b>7.5</b><span class="education-time">2015 - present</span></span>
+                                    <span class="education-gpa">GPA: <b>Good</b><span class="education-time">2015 - present</span></span>
                                 </div>
                                 <ul class="list basic_info">
-                                    <li><a href="tel:0344754889"><i class="lnr lnr-phone-handset"></i> 0344 754 889</a></li>
+                                    <li><a href="tel:0344754889"><i class="lnr lnr-phone-handset"></i> (+84) 344 754 889</a></li>
                                     <li><a href="mailto:phamhuu2702@gmail.com"><i class="lnr lnr-envelope"></i> phamhuu2702@gmail.com</a></li>
                                     <li><a href="#"><i class="lnr lnr-location"></i> Thu Duc, Ho Chi Minh, Vietnam</a></li>
                                 </ul>
