--- a/public/index.html
+++ b/public/index.html
@@ -79,17 +79,17 @@
                         <div class="media-body">
                             <div class="personal_text">
                                 <h6>Hello, I'm </h6>
-                                <h3>PHAM THE HUU</h3>
-                                <h5>BACKEND WEB DEVELOPER</h5>
+                                <h3>HUU PHAM</h3>
+                                <h5>WEB DEVELOPER</h5>
                                 <div class="education">
                                     <span class="education-title">INFORMATION TECHNOLOGY</span>
                                     <span class="education-school">HCMC University of Technology and Education</span>
-                                    <span class="education-gpa">GPA: <b>Good</b><span class="education-time">2015 - present</span></span>
+                                    <!-- <span class="education-gpa">GPA: <b>Good</b><span class="education-time">2015 - present</span></span> -->
                                 </div>
                                 <ul class="list basic_info">
                                     <li><a href="tel:0344754889"><i class="lnr lnr-phone-handset"></i> (+84) 344 754 889</a></li>
                                     <li><a href="mailto:phamhuu2702@gmail.com"><i class="lnr lnr-envelope"></i> phamhuu2702@gmail.com</a></li>
-                                    <li><a href="#"><i class="lnr lnr-location"></i> Thu Duc, Ho Chi Minh, Vietnam</a></li>
+                                    <li><a href="#"><i class="lnr lnr-location"></i>Ho Chi Minh, Vietnam</a></li>
                                 </ul>
                                 <ul class="list personal_social">
                                     <li><a href="https://www.facebook.com/phamhuu2702" target="_blank"><i class="fa fa-facebook"></i></a></li>
@@ -161,7 +161,7 @@
                                     <h4>Projects</h4>
                                     <ul>
                                         <li>
-                                            <b><a href="https://istoresvn.herokuapp.com/" target="_blank">istoresvn.herokuapp.com</a></b> (MERN Stack - Heroku, MongoDB Atlas, Cloudinary)
+                                            <b><a href="https://istoresvn.herokuapp.com/" target="_blank">istoresvn.herokuapp.com</a></b> (MERN Stack - Heroku, MongoDB Atlas, Cloudinary - Student project)
                                         </li>
                                     </ul>
                                 </div>
@@ -184,6 +184,8 @@
         </div>
     </section>
     <!--================End Welcome Area =================-->
+        
+    <hr />
 
     <!--================Welcome Area =================-->
     <section class="welcome_area p_100">
